test/files/neg/t5663-badwarneq.check
t5663-badwarneq.scala:42: warning: comparing case class values of types Some[Int] and None.type using `==' will always yield false
    println(new Some(1) == None) // Should complain on type, was: spuriously complains on fresh object
                        ^
t5663-badwarneq.scala:43: warning: comparing case class values of types Some[Int] and Thing using `==' will always yield false
    println(Some(1) == new Thing(1)) // Should complain on type, was: spuriously complains on fresh object
                    ^
t5663-badwarneq.scala:51: warning: ThingOne and Thingy are unrelated: they will most likely never compare equal
    println(t1 == t2) // true, but apparently unrelated, a compromise warning
               ^
t5663-badwarneq.scala:52: warning: ThingThree and Thingy are unrelated: they will most likely never compare equal
    println(t4 == t2) // true, complains because ThingThree is final and Thingy not a subclass, stronger claim than unrelated
               ^
t5663-badwarneq.scala:55: warning: comparing case class values of types ThingTwo and Some[Int] using `==' will always yield false
    println(t3 == Some(1)) // false, warn on different cases
               ^
t5663-badwarneq.scala:56: warning: comparing values of types ThingOne and Cousin using `==' will always yield false
    println(t1 == c) // should warn
               ^
t5663-badwarneq.scala:64: warning: comparing case class values of types Simple and SimpleSibling.type using `==' will always yield false
    println(new Simple() == SimpleSibling) // like Some(1) == None, but needn't be final case
                         ^
error: No warnings can be incurred under -Xfatal-warnings.
7 warnings found
one error found
